insert the films db Angular

--- a/test/Angular-Client/index.html
+++ b/test/Angular-Client/index.html
@@ -16,7 +16,9 @@
 
 	<script src="scripts/router.js"></script>
 	<script src="scripts/controllers/note.js"></script>
+	<script src="scripts/controllers/film.js"></script>
 	<script src="scripts/services/NoteService.js"></script>
+	<script src="scripts/services/FilmService.js"></script>
 
 	<script src="assets/js/jquery-2.1.0.min.js"></script>
 	<script src="assets/js/materialize.min.js"></script>
